# iot-safelab

./: README.md  app.py  config.py  hw_iotda.py  requirements.txt  test.py
bearpi/: BUILD.gn  my_app.c
bearpi/include/: E53_IA1.h
bearpi/src/: E53_IA1.c
web/: package-lock.json  package.json
web/src/: App.js  Chart.js  Dashboard.js  apiFetch.js  ctrlItem.js  index.js  listItems.js
