
static_library("myapp") {
    sources = [
        "my_app.c",
        "src/wifi_connect.c",
        "src/E53_SF1.c",
        "src/E53_IA1.c"
        
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//third_party/cJSON",
        "//third_party/iot_link/oc_mqtt/oc_mqtt_al",
        "//third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
        "//third_party/iot_link/inc",
        "//third_party/iot_link/queue",
        "include"
    ]

    deps = [ 
             "//third_party/iot_link:iot_link",
    ]

}
